--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .off-screen-menu {
     background-color: black ;
     width: 100%;
-    opacity:0.5;
+    /* opacity:0.5; */
     height: 100vh;
     width: 100%;
     max-width: 1025px;
@@ -15,6 +15,7 @@
     text-align: center; */
     font-size: 3rem;
     transition: 0.3s ease;
+    z-index: 200;
     
 }
 
@@ -22,9 +23,13 @@
     right: 0;
 }
 nav {
+    width: 100%;
+    height: 100px;
     padding: 1rem;
     display: flex;
-    background-color:rgb(18, 18, 18); 
+    background-color: white;
+    position: fixed;
+    /* position: relative; */
 
     
 }
@@ -39,7 +44,7 @@ nav {
 .ham-menu span {
     height: 5px;
     width: 100%;
-    background-color: goldenrod;
+    background-color: rgb(68, 37, 206);
     border-radius: 25px;
     position: absolute;
     top: 50%;
@@ -81,7 +86,7 @@ li{color: azure;}
     margin-left: 50px;
 }
 .container {
-    border-bottom: 2px solid goldenrod;
+    border-bottom: 2px solid rgb(68, 37, 206);
     margin-bottom: 30px;
     position: relative;
     padding: 20px;
@@ -118,21 +123,220 @@ li{color: azure;}
 
 
   .teeth{
-    color: goldenrod;
-    font-size: 40px;
+    color: rgb(68, 37, 206);
+    font-size: 50px;
     position: absolute;
     top: 40px;
     left: 40px;
     transform: translate(-50%,-50%);
-    transition: 0.3s ease;
+    z-index: 20;
+    position: fixed;
+    
 }
+
 .icon-h2 {
-    color: white;
+    color: black;
     font-size: 30px;
     position: absolute;
     top: 40px;
-    left: 50%;
+    left: 150px;
     transform: translate(-50%,-50%);
+    font-family: "Noto Serif", serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+      z-index: 21;
+      position: fixed;
+      
 } 
-.one:hover .dropbtn {background-color: #3e8e41;}
+
+/* header end */
+.secondpart-img {
+    top: 150px;
+    max-width: 100%;
+    height: 500px;
+    background-image: url(../im/Dental-Chair-Price-in-Bangladesh-Dental-Unit-Prices.jpg);
+    background-repeat:no-repeat ;
+    background-position: 50%;
+    background-size: contain;
+    /* opacity: 0.5; */
+    position: relative;
+    margin-bottom: 200px;
+}
    
+.section-p{
+    color: rgb(68, 37, 206);
+    font-size: 20px;
+    font-family: "Noto Serif", serif;
+    font-optical-sizing:auto;
+    font-weight: 400;
+    font-style: italic;
+    font-variation-settings:
+      "wdth" 100;
+     }
+.dentl-chair1 {
+    position: absolute;
+    top: 100px;
+    right: 70px;
+    z-index: 11;
+}
+.dentl-chair2 {
+    position: absolute;
+    top: 150px;
+    left: 70px;
+    z-index: 13;
+}
+.dentl-chair3 {
+    position: absolute;
+    bottom: 70px;
+    left: 70px;
+    z-index: 12;
+}
+    
+/* .free-place {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:;
+    height: 300px;
+   
+  
+} */
+.fx {
+    
+    width: 100%;
+}
+.fx h2 {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 20px;
+}
+.free-place {
+    height: 300px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+.free-place img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50% ;
+    border: 1px solid rgb(68, 37, 206);
+}
+/* footer */
+
+
+.back-gr {
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    height: 661px;
+    border-radius: 15px;
+    margin: 42px 54px;
+    /* position: relative; */
+    /* position: absolute;
+    top: 50px;
+    left: 50px; */
+    
+    
+}
+
+
+textarea {
+  resize: none;
+  width: 250px;
+  height:100px;
+  font-size: 20px;
+  border-radius: 15px;
+  margin-top: 15px;
+  /* padding-left: 53px;
+  padding-top: 23px; */
+}
+.submit{
+    width: 250px;
+    height:40px;
+    border-radius: 15px;
+    background-color: rgb(68, 37, 206);
+    color: white;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    margin-top: 15px;
+    outline: none;
+    
+}
+.submit:hover {background-color: rgb(163, 147, 233);}
+
+.submit:active {
+  background-color: rgb(163, 147, 233);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+.input-elments:nth-child(2){
+    
+    /* margin-top: 15px;
+    padding-left: 53px; */
+    padding-top: 20px;
+    padding-bottom: 20px;
+   
+    /* margin-left: 53px;
+    margin-right: 18px;
+    margin-bottom: 15px; */
+ 
+}
+
+/* .second-box {
+    width: 499px;
+    height: 400px;
+    border-radius: 15px;
+    /* margin-bottom: 20px;
+    margin-right: 53px; */
+    /* position: absolute; */
+    /* top: 50px;
+    left: 350px; */
+
+      
+.main {
+    display: flex;
+}
+.last-box
+{
+    width: 355px;
+    height: 82px;
+}
+.box-1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color:black;
+    line-height: 30px;
+
+} 
+.box-p {
+    font-size: 16px;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    line-height: 24px;
+}
+.two{
+    width: 384px;
+    height: 76px;
+    margin-left:57px ;
+}
+.last-box {
+    margin: 0 auto;
+    padding-bottom: 10px;
+}
+.box-1 {
+    margin-top: 24px;
+}
+.one {
+    padding-top: 42px;
+    margin-left: 57px;
+} 
