--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,21 @@
 
 .off-screen-menu.active {
     right: 0;
+    position: fixed;
+    z-index: 300;
 }
 nav {
     width: 100%;
     height: 100px;
-    padding: 1rem;
-    display: flex;
+    padding: 20px;
     background-color: white;
     position: fixed;
+    z-index: 10;
+    background-image: url(../images/2222.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+   
+   
     /* position: relative; */
 
     
@@ -73,12 +80,9 @@ nav {
 li{color: azure;}
 .icon {
     width: 100px;
-    height: 100px;
+    height: 50px;
 }
-/* .accordion-title,
-.nav-div {
-    border-bottom: 2px solid white;
-} */
+
 
 .accordion-container {
     max-width: 600px;
@@ -103,6 +107,9 @@ li{color: azure;}
     right: 30px;
     transform: translateY(-50%);
     
+}
+.container a{
+    color: white;
 }
 
 .acordion-text {
@@ -154,15 +161,15 @@ li{color: azure;}
 
 /* header end */
 .secondpart-img {
-    top: 150px;
+    top: 100px;
     max-width: 100%;
     height: 500px;
-    background-image: url(../im/Dental-Chair-Price-in-Bangladesh-Dental-Unit-Prices.jpg);
+    background-image: url(../images/6.jpg);
     background-repeat:no-repeat ;
     background-position: 50%;
-    background-size: contain;
+    background-size: cover;
     /* opacity: 0.5; */
-    position: relative;
+    /* position: relative; */
     margin-bottom: 200px;
 }
    
@@ -176,35 +183,26 @@ li{color: azure;}
     font-variation-settings:
       "wdth" 100;
      }
-.dentl-chair1 {
+.dentl-chairtext1 {
     position: absolute;
-    top: 100px;
+    top: 50%;
     right: 70px;
-    z-index: 11;
+   
 }
-.dentl-chair2 {
+.dentl-chairtext2 {
     position: absolute;
     top: 150px;
     left: 70px;
-    z-index: 13;
+    
 }
-.dentl-chair3 {
+.dentl-chairtext3 {
     position: absolute;
-    bottom: 70px;
+    bottom: 120px;
     left: 70px;
-    z-index: 12;
+    /* z-index: 1; */
 }
     
-/* .free-place {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:;
-    height: 300px;
-   
-  
-} */
+
 .fx {
     
     width: 100%;
@@ -214,7 +212,7 @@ li{color: azure;}
     font-size: 20px;
     padding-top: 20px;
 }
-.free-place {
+.dental-parts {
     height: 300px;
     margin: 0 auto;
     display: flex;
@@ -222,121 +220,81 @@ li{color: azure;}
     align-items: center;
     
 }
-.free-place img {
+.dental-parts img {
     width: 200px;
     height: 200px;
     border-radius: 50% ;
     border: 1px solid rgb(68, 37, 206);
-}
-/* footer */
-
-
-.back-gr {
-    align-items: center;
-    justify-content: center;
-    width: 500px;
-    height: 661px;
-    border-radius: 15px;
-    margin: 42px 54px;
-    /* position: relative; */
-    /* position: absolute;
-    top: 50px;
-    left: 50px; */
-    
     
 }
 
 
-textarea {
-  resize: none;
-  width: 250px;
-  height:100px;
-  font-size: 20px;
-  border-radius: 15px;
-  margin-top: 15px;
-  /* padding-left: 53px;
-  padding-top: 23px; */
-}
-.submit{
-    width: 250px;
-    height:40px;
-    border-radius: 15px;
-    background-color: rgb(68, 37, 206);
+.home a {
     color: white;
-    font-size: 20px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    margin-top: 15px;
-    outline: none;
+}
+
+
+.free {
     
-}
-.submit:hover {background-color: rgb(163, 147, 233);}
+    height: 150px;}
 
-.submit:active {
-  background-color: rgb(163, 147, 233);
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
-.input-elments:nth-child(2){
-    
-    /* margin-top: 15px;
-    padding-left: 53px; */
-    padding-top: 20px;
-    padding-bottom: 20px;
-   
-    /* margin-left: 53px;
-    margin-right: 18px;
-    margin-bottom: 15px; */
- 
-}
 
-/* .second-box {
-    width: 499px;
-    height: 400px;
-    border-radius: 15px;
-    /* margin-bottom: 20px;
-    margin-right: 53px; */
-    /* position: absolute; */
-    /* top: 50px;
-    left: 350px; */
+/* dentalunit page */
 
-      
-.main {
+.img-container1{
+    top: 250px;
     display: flex;
+    margin: 30px;
+    
+   
 }
-.last-box
-{
-    width: 355px;
-    height: 82px;
-}
-.box-1 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    color:black;
-    line-height: 30px;
+.img-container{
+    max-width: 350px;
+    width: 100%;
+    height: 300px;
+    justify-content: center;
+    margin-left: 50px;
+ 
+ }
+ .img-container:hover{
+        border:3px solid rgb(68, 37, 206);
+        border-radius: 25px;
+        transition-duration: 0.4s;
+        border-radius: 25px; 
+    
+    }
 
-} 
-.box-p {
-    font-size: 16px;
+
+.img-container1 img {
+    margin-left: 30px;
+    padding: 10px 30;
+}
+.img-container1 h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-family: "Murecho", sans-serif;
+    font-weight: 600;
+}
+.img-container1 a {
+    margin-left: 40%;
     color: black;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    line-height: 24px;
+    font-family: "Murecho", sans-serif;
+
 }
-.two{
-    width: 384px;
-    height: 76px;
-    margin-left:57px ;
+.img-container1 a:hover {
+    font-size: 30px;
+    color:rgb(68, 37, 206);
+    margin-left: 35%;
+    margin-top: 20px;
 }
-.last-box {
-    margin: 0 auto;
-    padding-bottom: 10px;
-}
-.box-1 {
-    margin-top: 24px;
-}
-.one {
-    padding-top: 42px;
-    margin-left: 57px;
-} 
+
+.murecho {
+    font-family: "Murecho", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+  }
+
+
+
+
